# flask-2025-01

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst
src/flask_2025_01/: __init__.py  main.py
tests/: test_main.py
